fix: fixed floating box spacing

--- a/style.css
+++ b/style.css
@@ -477,7 +477,7 @@ nav button:hover{
     }
 
     #floating-box h2 {
-        margin: 20px;
+        margin: 0 20px;
     }
     
     #floating-box button {
